completed navbar styles

--- a/sty.css/portfolio.css
+++ b/sty.css/portfolio.css
@@ -5,10 +5,18 @@ body{
 .btn-primary{
     border-radius: 4px;
     background: #FD6E0A;
+    border: 0;
+    font-size: 20px;
+    font-weight: 700;
+    color: aliceblue;
+    padding: 15px 35px;
+
 }
 /* nav relatad style */
 nav {
     display: flex;
+    justify-content:space-between;
+    align-items: center;
    
 }
 .nav-title{
@@ -21,6 +29,7 @@ nav {
 }
 nav> ul{
     display: flex;
+    align-items: center;
 }
 nav li{
     list-style: none;
