added hardys profile image

--- a/sty.css/portfolio.css
+++ b/sty.css/portfolio.css
@@ -1,3 +1,7 @@
+/* header styles */
+.header{
+    background-color: blanchedalmond;
+}
 /* shared styles */
 body{
     font-family: 'Open Sans', sans-serif;
@@ -17,6 +21,7 @@ nav {
     display: flex;
     justify-content:space-between;
     align-items: center;
+    margin: 0px 200px;
    
 }
 .nav-title{
@@ -39,4 +44,14 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 584px;
+    height: 676px;
+    
 }
