--- a/sty.css/portfolio.css
+++ b/sty.css/portfolio.css
@@ -1,10 +1,27 @@
 /* header styles */
 .header{
     background-color: blanchedalmond;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 /* shared styles */
 body{
     font-family: 'Open Sans', sans-serif;
+}
+.section-title{
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: normal;
+}
+.section-descrip{
+    color:  #757575;
+text-align: center;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
 }
 .btn-primary{
     border-radius: 4px;
@@ -46,12 +63,40 @@ nav a{
     color: #474747;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-pic{
     width: 584px;
     height: 676px;
     
+}
+.banner-content{
+    max-width: 500px;
+}
+.banner-gretting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+.banner-title{
+    font-size: 85px;
+font-style: normal;
+font-weight: 700;
+margin-top: 5px;
+margin-bottom: 20px;
+}
+.banner-discrip{
+    margin-top: 30px;
+}
+
+/* main section style */
+/* about section style */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
 }
