--- a/sty.css/portfolio.css
+++ b/sty.css/portfolio.css
@@ -97,6 +97,9 @@ margin-bottom: 20px;
     max-width: 1140px;
     margin:0px auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section style */
 .about{
@@ -111,4 +114,27 @@ margin-bottom: 20px;
 }
 .about-info{
     text-align: center;
+}
+#what-i-do-descrip{
+    padding: 30px  34px;
+}
+/* skils related style */
+.skills-container{  
+    display: flex;
+    gap: 25px;
+}
+.skill-descrip{
+    color: #757575;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+/* resume related styles */
+.resume-coloum-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
